@@ -1,3 +1,8 @@
+2006-10-29 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>
+
+	* device/include/mcs51/serial_IO.h: putchar() and getchar() using
+	  serial port.
+
 2006-10-29 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* device/include/malloc.h,
